# RayTracer

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
src/OpenGL/: opengl_include.h
src/OpenGL/loader/: opengl-loader.h
src/RayTracing/: Camera.h  Ray.h  color.h  exampleScenes.h  general.h  hit_record.h  vec.h
src/RayTracing/Materials/: Dielectric.h  Lambertian.h  Material.h  Metal.h
src/RayTracing/Objects/: Mesh.h  Sphere.h  Triangle.h  hittable.h  hittable_list.h
src/RayTracing/Texture/: fTexture.cpp  fTexture.h
src/Threading/: mingw.thread.h
src/stb/: stb_impl.cpp
